# zdm_lock_wrapper

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vckpg.json  vcpkg.json
include/zdm/: lock_wrapper.hpp
tests/: CMakeLists.txt
tests/unit_tests/: lock_wrapper.test.cpp
